fixed up a few things

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <style>
       html{
         background-color: hsl(47, 88%, 63%);
+        padding: 20%
       }
       body{
         background-color: white;
-        padding: 20%;
-        padding-left: 3%;
+        padding-left: 10%;
+        padding-right: 10%;
         border-radius: 5%;
         margin-left: 15%;
         margin-right: 15%;
@@ -32,13 +33,16 @@
         border-radius: 5%;
         
       }
+      #main{
+        margin: 20%
+      }
 
 
 
     </style>
   </header>
   <body>
-    <div class="container-fluid">
+    <div id="main" class="container-fluid">
         <!--Start image section-->
        <div id="image1">
          <img src="assets/images/illustration-article.svg" alt="picture of illustration">
